# django.admin.auth.emailpin

./: .pylintrc  MANIFEST.in  README.md  READMEru.md  history.txt  makefile  setup.cfg
.github/workflows/: django3.yml  django4.yml  pep257.yml
django_admin_auth_emailpin/: __init__.py  models.py
example/: models.py  settings.py  urls.py  views.py
example/assets/: readme.txt
tests/: conftest.py
tests/test/: __init__.py  test_models.py
